// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backends local backend snapshot typescript 1`] = `
"import { Construct } from "constructs";
import { LocalBackend, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new LocalBackend(this, {
      path: "relative/path/to/terraform.tfstate",
    });
  }
}
"
`;

exports[`backends remote backend snapshot typescript 1`] = `
"import { Construct } from "constructs";
import { RemoteBackend, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new RemoteBackend(this, {
      hostname: "app.terraform.io",
      organization: "company",
      workspaces: [
        {
          name: "my-app-prod",
        },
      ],
    });
  }
}
"
`;

exports[`backends remote state snapshot typescript 1`] = `
"import { Construct } from "constructs";
import { DataTerraformRemoteState, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new DataTerraformRemoteState(this, "vpc", {
      organization: "hashicorp",
      workspaces: [
        {
          name: "vpc-prod",
        },
      ],
    });
  }
}
"
`;

exports[`backends remote state types snapshot typescript 1`] = `
"import { Construct } from "constructs";
import { DataTerraformRemoteStateS3, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new DataTerraformRemoteStateS3(this, "s3", {
      bucket: "mybucket",
      key: "path/to/my/key",
      region: "us-east-1",
    });
  }
}
"
`;
